--- a/menu/menu.html
+++ b/menu/menu.html
@@ -70,7 +70,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item" href="../register/signup.html"
-                    >Đăng ký</a
+                    >Đăng kýijjnfgwnrtgijvwrigj</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
