--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -75,7 +75,9 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="../information/inform.html">Thông tin</a>
+                  <a class="dropdown-item" href="../information/inform.html"
+                    >Thông tin</a
+                  >
                 </li>
               </ul>
             </div>
@@ -90,11 +92,15 @@
               </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../setting/about/about.html">About</a>
+                  <a class="dropdown-item" href="../setting/about/about.html"
+                    >About</a
+                  >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="../setting/theme/theme.html">Theme</a>
+                  <a class="dropdown-item" href="../setting/theme/theme.html"
+                    >Theme</a
+                  >
                 </li>
               </ul>
             </div>
@@ -108,7 +114,7 @@
         <div class="Wel">
           <p class="Welcome1">Sáng, trưa, chiều, tối</p>
           <p class="Welcome2">ai mà chẳng đói !</p>
-          <button class="buy">Đặt món ngay</button>
+          <button class="buy" onclick="buy()">Đặt món ngay</button>
         </div>
 
         <div class="container">
@@ -155,7 +161,7 @@
         </div>
         <div class="container-grid">
           <div class="aboutus">
-            <p style="font-weight: bold;">About us:</p>
+            <p style="font-weight: bold">About us:</p>
             <p>- Giờ hoạt động: 24/24</p>
             <p>- Phone number: 090 2729 859</p>
           </div>
@@ -164,16 +170,38 @@
             style="background-color: white; margin-top: 125px"
             src="https://png.pngtree.com/png-clipart/20231016/original/pngtree-street-food-cart-png-image_13319772.png"
             width="35%"
-            clip-path: inset(500px 100px 100px 50px);
+            clip-path:
+            inset(500px
+            100px
+            100px
+            50px);
             alt="footer"
           />
           <div class="followus">
-            <p style="font-weight: bold;">Follow us:</p>
+            <p style="font-weight: bold">Follow us:</p>
             <p>
-              <i class="fa-brands fa-square-facebook fa-2x" style="color: #1100ff;"></i>
-              <i class="fa-brands fa-facebook-messenger fa-2x" style="color: #d400ff;"></i>
-              <i width="100" height="100" class="fa-brands fa-youtube fa-2x" style="color: #ff0000;"></i>
-              <i class="fa-brands fa-tiktok fa-2x" style="color: #ffffff; background-color: black; border: 5px solid black"></i>
+              <i
+                class="fa-brands fa-square-facebook fa-2x"
+                style="color: #1100ff"
+              ></i>
+              <i
+                class="fa-brands fa-facebook-messenger fa-2x"
+                style="color: #d400ff"
+              ></i>
+              <i
+                width="100"
+                height="100"
+                class="fa-brands fa-youtube fa-2x"
+                style="color: #ff0000"
+              ></i>
+              <i
+                class="fa-brands fa-tiktok fa-2x"
+                style="
+                  color: #ffffff;
+                  background-color: black;
+                  border: 5px solid black;
+                "
+              ></i>
             </p>
           </div>
         </div>
