--- a/menu/menu.html
+++ b/menu/menu.html
@@ -70,7 +70,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item" href="../register/signup.html"
-                    >Đăng kýijjnfgwnrtgijvwrigj</a
+                    >Đăng ký</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
@@ -103,8 +103,12 @@
       </div>
     </nav>
 
-        <h1>Menu</h1>
+        <h1 id="menu">Thực đơn</h1>
 
+
+
+
+        
         <div class="container-grid">
           <div class="aboutus">
             <p style="font-weight: bold;">About us:</p>
