--- a/login/login.html
+++ b/login/login.html
@@ -13,12 +13,12 @@
         </div>
 
         <h1 class="Login"> Log In</h1>
-        <form autocomplete="off">
-            <input class = "input" type="text" id="name" autocomplete="off" placeholder="   Username" onfocus="document.getElementById('wrongName').innerText = ''">
+        <form class="login123" autocomplete="off">
+            <input class = "input" type="email" id="email" autocomplete="off" placeholder="   Email" onfocus="document.getElementById('wrongName').innerText = ''">
             <p class="wrong" id="wrongName"></p>
             <input class = "input" type="password" id="password" autocomplete="new-password" placeholder="   Password" onfocus="document.getElementById('wrongPass').innerText = ''">
             <p class="wrong" id="wrongPass"></p>
-            <input onclick="check()" class="button" type="button" value="Log in"><br><br>
+            <input class="button" type="submit" value="Log in"><br><br>
         </form>
         <br>
         <div class="p" style="text-align: center;">
@@ -27,6 +27,6 @@
             <span style="color: rgb(145, 145, 145);"> ngay</span>
         </div>
     </div>
-    <script src="login.js"></script>
+    <script type="module" src="./login.js" defer></script>
 </body>
 </html>
