--- a/setting/theme/theme.html
+++ b/setting/theme/theme.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Toggle Switch</title>
+    <title>Theme page</title>
         <link rel="stylesheet" href="theme.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -22,8 +22,7 @@
       .switch {
         position: relative;
         display: inline-block;
-        margin: 150px;
-        margin-left: 350px;
+        margin-top: 190px;
         width: 600px;
         height: 340px;
       }
@@ -90,13 +89,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="../menu/menu.html">
+            <a class="nav-link" href="../../menu/menu.html">
               <i class="fa-solid fa-clipboard-list"></i> Menu
             </a>
-            <a class="nav-link" href="../news/news.html">
+            <a class="nav-link" href="../../news/news.html">
               <i class="fa-solid fa-newspaper"></i> Tin tức
             </a>
-            <a class="nav-link" href="../shopping/shop.html">
+            <a class="nav-link" href="../../shopping/shop.html">
               <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
             </a>
             <!-- Example single danger button -->
@@ -111,18 +110,13 @@
               </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../login/login.html"
-                    >Đăng nhập</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="../register/signup.html"
-                    >Đăng ký</a
+                  <a class="dropdown-item" href="../../login/login.html"
+                    >Đăng xuất</a
                   >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="../information/inform.html">Thông tin</a>
+                  <a class="dropdown-item" href="../../information/inform.html">Thông tin</a>
                 </li>
               </ul>
             </div>
@@ -137,11 +131,11 @@
               </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="../setting/about/about.html">About</a>
+                  <a class="dropdown-item" href="../../setting/about/about.html">About</a>
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="../setting/theme/theme.html">Theme</a>
+                  <a class="dropdown-item" href="../../setting/theme/theme.html">Theme</a>
                 </li>
               </ul>
             </div>
@@ -183,6 +177,28 @@
         const isDark = savedMode === "true"; // Vì localStorage luôn lưu dưới dạng chuỗi
         applyTheme(isDark);
       });
+      
+      // Khi load trang
+      document.addEventListener("DOMContentLoaded", () => {
+        // Lấy màu đã lưu nếu có
+        const savedColor = localStorage.getItem("bgColor");
+        if (savedColor) {
+          document.body.style.backgroundColor = savedColor;
+        }
+
+        // Giả sử bạn có nút đổi màu
+        const btnChangeColor = document.getElementById("btnChangeColor");
+        btnChangeColor.addEventListener("click", () => {
+          const newColor = prompt("Nhập màu nền mới (tên màu hoặc hex):");
+          if (newColor && newColor.trim() !== "") {
+            document.body.style.backgroundColor = newColor;
+
+            // Lưu vào localStorage
+            localStorage.setItem("bgColor", newColor);
+          }
+        });
+      });
+
     </script>
     <script
           src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
