--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -65,15 +65,12 @@
               <ul class="dropdown-menu">
                 <li>
                   <a class="dropdown-item" href="../login/login.html"
-                    >Đăng nhập</a
+                    >Đăng xuất</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/signup.html"
-                    >Đăng ký</a
-                  >
+                  <hr class="dropdown-divider" />
                 </li>
-                <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="../information/inform.html"
                     >Thông tin</a
@@ -96,7 +93,9 @@
                     >About</a
                   >
                 </li>
-                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <hr class="dropdown-divider" />
+                </li>
                 <li>
                   <a class="dropdown-item" href="../setting/theme/theme.html"
                     >Theme</a
