--- a/information/inform.html
+++ b/information/inform.html
@@ -1,141 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>News Page</title>
-    <link rel="stylesheet" href="news.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <a class="logo" href="../homepage/homepage.html">
-        <p id="carry">🍛</p>
-        <p id="S">S</p>
-        <p id="treet">treet</p>
-        <p id="F">F</p>
-        <p id="east">east</p>
-      </a>
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="../menu/menu.html">
-              <i class="fa-solid fa-clipboard-list"></i> Menu
-            </a>
-            <a class="nav-link" href="../news/news.html">
-              <i class="fa-solid fa-newspaper"></i> Tin tức
-            </a>
-            <a class="nav-link" href="../shopping/shop.html">
-              <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
-            </a>
-            <!-- Example single danger button -->
-            <div class="btn-group">
-              <button
-                type="button"
-                class="btn-danger dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa-solid fa-user"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="../login/login.html"
-                    >Đăng nhập</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="../register/signup.html"
-                    >Đăng ký</a
-                  >
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="../information/inform.html">Thông tin</a>
-                </li>
-              </ul>
-            </div>
-            <div class="btn-group">
-              <button
-                type="button"
-                class="btn-danger dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa-solid fa-gear"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="../setting/about/about.html">About</a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="../setting/theme/theme.html">Theme</a>
-                </li>
-              </ul>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Information Page</title>
+  <link rel="stylesheet" href="inform.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <a class="logo" href="../homepage/homepage.html">
+      <p id="carry">🍛</p>
+      <p id="S">S</p>
+      <p id="treet">treet</p>
+      <p id="F">F</p>
+      <p id="east">east</p>
+    </a>
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="../menu/menu.html">
+            <i class="fa-solid fa-clipboard-list"></i> Menu
+          </a>
+          <a class="nav-link" href="../news/news.html">
+            <i class="fa-solid fa-newspaper"></i> Tin tức
+          </a>
+          <a class="nav-link" href="../shopping/shop.html">
+            <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
+          </a>
+          <!-- Example single danger button -->
+          <div class="btn-group">
+            <button type="button" class="btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-user"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="../login/login.html">Đăng xuất</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" href="../information/inform.html">Thông tin</a>
+              </li>
+            </ul>
+          </div>
+          <div class="btn-group">
+            <button type="button" class="btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-gear"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="../setting/about/about.html">About</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" href="../setting/theme/theme.html">Theme</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-        <div class="container-grid">
-          <div class="aboutus">
-            <p style="font-weight: bold;">About us:</p>
-            <p>- Giờ hoạt động: 24/24</p>
-            <p>- Phone number: 090 2729 859</p>
-          </div>
-          <img
-            class="foot-img"
-            style="background-color: white; margin-top: 125px"
-            src="https://png.pngtree.com/png-clipart/20231016/original/pngtree-street-food-cart-png-image_13319772.png"
-            width="35%"
-            clip-path: inset(500px 100px 100px 50px);
-            alt="footer"
-          />
-          <div class="followus">
-            <p style="font-weight: bold;">Follow us:</p>
-            <p>
-              <i class="fa-brands fa-square-facebook fa-2x" style="color: #1100ff;"></i>
-              <i class="fa-brands fa-facebook-messenger fa-2x" style="color: #d400ff;"></i>
-              <i width="100" height="100" class="fa-brands fa-youtube fa-2x" style="color: #ff0000;"></i>
-              <i class="fa-brands fa-tiktok fa-2x" style="color: #ffffff; background-color: black; border: 5px solid black"></i>
-            </p>
-          </div>
-        </div>
-        <script src="./inform.js" defer></script>
+  <h1><b>My profile</b></h1>
+  <div id="container">
+    <div id="one">
+      <img src="https://tse3.mm.bing.net/th/id/OIP.AI5e7MykpdjCVOLzei9dFgAAAA?pid=Api&P=0&h=220" alt="User Avatar"
+        class="user-avatar" />
+      <button class="btn-edit">Thay ảnh</button>
+    </div>
+    <div id="two">
+      <div  >
+        <strong>Tên ngưởi dùng:</strong>
+        <span id="username">...Loading...</span>
+      </div>
+      <div  >
+        <strong>Email:</strong>
+        <span id="email">...Loading...</span>
+      </div>
+      <div>
+        <strong>Mật khẩu:</strong>
+        <span id="password"> *********</span>
+      </div>
+      <div  >
+        <strong>Tổng chi tiêu:</strong>
+        <span id="total">0đ</span>
+      </div>
+      <div  >
+        <strong>Tổng món ăn đã đặt:</strong>
+        <span id="product">0</span>
+      </div>
+    </div>
+  </div>
 
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"
-        ></script>
 
-        <!-- <footer>
+  <div class="container-grid">
+    <div class="aboutus">
+      <p style="font-weight: bold;">About us:</p>
+      <p>- Giờ hoạt động: 24/24</p>
+      <p>- Phone number: 090 2729 859</p>
+    </div>
+    <img class="foot-img" style="background-color: white; margin-top: 125px"
+      src="https://png.pngtree.com/png-clipart/20231016/original/pngtree-street-food-cart-png-image_13319772.png"
+      width="35%" clip-path: inset(500px 100px 100px 50px); alt="footer" />
+    <div class="followus">
+      <p style="font-weight: bold;">Follow us:</p>
+      <p>
+        <i class="fa-brands fa-square-facebook fa-2x" style="color: #1100ff;"></i>
+        <i class="fa-brands fa-facebook-messenger fa-2x" style="color: #d400ff;"></i>
+        <i width="100" height="100" class="fa-brands fa-youtube fa-2x" style="color: #ff0000;"></i>
+        <i class="fa-brands fa-tiktok fa-2x"
+          style="color: #ffffff; background-color: black; border: 5px solid black"></i>
+      </p>
+    </div>
+  </div>
+  <script type="module" src="./inform.js" defer></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+  <!-- <footer>
           <div id="foot">
             <p class="contract">Phone number: 090 2729 859</p>
             <br />
@@ -164,8 +163,9 @@
             /></a>
           </div>
         </footer> -->
-      </div>
-    </section>
-    <button id="backToTop" title="Lên đầu trang">↑</button>
-  </body>
+  </div>
+  </section>
+  <button id="backToTop" title="Lên đầu trang">↑</button>
+</body>
+
 </html>
