--- a/information/inform.html
+++ b/information/inform.html
@@ -84,11 +84,11 @@
       <button class="btn-edit">Thay ảnh</button>
     </div>
     <div id="two">
-      <div  >
+      <div>
         <strong>Tên ngưởi dùng:</strong>
         <span id="username">...Loading...</span>
       </div>
-      <div  >
+      <div>
         <strong>Email:</strong>
         <span id="email">...Loading...</span>
       </div>
@@ -96,11 +96,11 @@
         <strong>Mật khẩu:</strong>
         <span id="password"> *********</span>
       </div>
-      <div  >
+      <div>
         <strong>Tổng chi tiêu:</strong>
         <span id="total">0đ</span>
       </div>
-      <div  >
+      <div>
         <strong>Tổng món ăn đã đặt:</strong>
         <span id="product">0</span>
       </div>
@@ -133,6 +133,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script>
+    (function () { if (!window.chatbase || window.chatbase("getState") !== "initialized") { window.chatbase = (...arguments) => { if (!window.chatbase.q) { window.chatbase.q = [] } window.chatbase.q.push(arguments) }; window.chatbase = new Proxy(window.chatbase, { get(target, prop) { if (prop === "q") { return target.q } return (...args) => target(prop, ...args) } }) } const onLoad = function () { const script = document.createElement("script"); script.src = "https://www.chatbase.co/embed.min.js"; script.id = "ELcdvgEDYbgjLgF3pupPW"; script.domain = "www.chatbase.co"; document.body.appendChild(script) }; if (document.readyState === "complete") { onLoad() } else { window.addEventListener("load", onLoad) } })();
+  </script>
 
   <!-- <footer>
           <div id="foot">
