--- a/shopping/shop.html
+++ b/shopping/shop.html
@@ -23,17 +23,17 @@
       <p id="east">east</p>
     </a>
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="../menu/menu.html">
             <i class="fa-solid fa-clipboard-list"></i> Menu
           </a>
           <a class="nav-link" href="../news/news.html">
-            <i class="fa-solid fa-newspaper"></i> Tin tức
+            <i class="fa-solid fa-newspaper"></i> Khám phá
           </a>
           <a class="nav-link" href="../shopping/shop.html">
             <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
@@ -99,11 +99,15 @@
       </p>
     </div>
   </div>
+  <div id="toast"></div>
   <script type="module" src="./shop.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script>
+    (function () { if (!window.chatbase || window.chatbase("getState") !== "initialized") { window.chatbase = (...arguments) => { if (!window.chatbase.q) { window.chatbase.q = [] } window.chatbase.q.push(arguments) }; window.chatbase = new Proxy(window.chatbase, { get(target, prop) { if (prop === "q") { return target.q } return (...args) => target(prop, ...args) } }) } const onLoad = function () { const script = document.createElement("script"); script.src = "https://www.chatbase.co/embed.min.js"; script.id = "ELcdvgEDYbgjLgF3pupPW"; script.domain = "www.chatbase.co"; document.body.appendChild(script) }; if (document.readyState === "complete") { onLoad() } else { window.addEventListener("load", onLoad) } })();
+  </script>
 
   <!-- <footer>
           <div id="foot">
