--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,159 +1,109 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản lý Menu - Admin</title>
-    <link rel="stylesheet" href="./admin.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    />
-  </head>
 
-  <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <a class="logo" href="../admin/admin.html">
-        <p id="carry">🍛</p>
-        <p id="S">S</p>
-        <p id="treet">treet</p>
-        <p id="F">F</p>
-        <p id="east">east</p>
-      </a>
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link text-danger fw-bold" href="../admin/admin.html">
-              <i class="fa-solid fa-screwdriver-wrench"></i> Quản lý Menu
-            </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quản lý Menu - Admin</title>
+  <link rel="stylesheet" href="./admin.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+</head>
 
-            <div class="btn-group">
-              <button
-                type="button"
-                class="btn-danger dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa-solid fa-user"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="../login/login.html"
-                    >Đăng xuất</a
-                  >
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="../information/inform.html"
-                    >Thông tin</a
-                  >
-                </li>
-              </ul>
-            </div>
+<body>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <a class="logo" href="../admin/admin.html">
+      <p id="carry">🍛</p>
+      <p id="S">S</p>
+      <p id="treet">treet</p>
+      <p id="F">F</p>
+      <p id="east">east</p>
+    </a>
+    <div class="container-fluid">
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+        <span class="navbar-toggler-icon"></span>
+      </button> -->
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link text-danger fw-bold" href="../admin/admin.html">
+            <i class="fa-solid fa-screwdriver-wrench"></i> Quản lý Menu
+          </a>
 
-            <div class="btn-group">
-              <button
-                type="button"
-                class="btn-danger dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa-solid fa-gear"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="../setting/about/about.html"
-                    >About</a
-                  >
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="../setting/theme/theme.html"
-                    >Theme</a
-                  >
-                </li>
-              </ul>
-            </div>
+          <div class="btn-group">
+            <button type="button" class="btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-user"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="../login/login.html">Đăng xuất</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" href="../information-admin/inform2.html">Thông tin</a>
+              </li>
+            </ul>
           </div>
+          </ul>
         </div>
       </div>
-    </nav>
-
-    <!-- ======================== CRUD MENU CHO ADMIN ======================== -->
-    <div class="container my-5">
-      <h2 class="text-center text-danger mb-4">
-        <i class="fa-solid fa-utensils"></i> Quản lý món ăn
-      </h2>
-
-      <!-- Form thêm món -->
-      <form id="foodForm" class="row g-3 mb-4">
-        <div class="col-md-4">
-          <input
-            type="text"
-            id="foodName"
-            placeholder="Tên món ăn"
-            class="form-control"
-            required
-          />
-        </div>
-        <div class="col-md-4">
-          <input
-            type="file"
-            id="foodImage"
-            accept="image/*"
-            class="form-control"
-            required
-          />
-        </div>
-
-        <div class="col-md-4">
-          <input
-            type="text"
-            id="foodDescribe"
-            placeholder="Mô tả món ăn"
-            class="form-control"
-            required
-          />
-        </div>
-
-        <div class="col-md-2">
-          <input
-            type="number"
-            id="foodPrice"
-            placeholder="Giá (VND)"
-            class="form-control"
-            required
-          />
-        </div>
-        <div class="col-md-2 d-grid">
-          <button type="submit" class="btn btn-primary">
-            <i class="fa-solid fa-plus"></i> Thêm món
-          </button>
-        </div>
-      </form>
-
-      <!-- Danh sách món -->
-      <div id="foodList" class="row"></div>
     </div>
+    </div>
+  </nav>
 
-    <script type="module" src="./admin.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+  <!-- ======================== CRUD MENU CHO ADMIN ======================== -->
+  <div class="container my-5">
+    <h2 class="text-center text-danger mb-4">
+      <i class="fa-solid fa-utensils"></i> Quản lý món ăn
+    </h2>
+
+    <!-- Form thêm món -->
+    <form id="foodForm" class="row g-3 mb-4">
+      <div class="col-md-4">
+        <input type="text" id="foodName" placeholder="Tên món ăn" class="form-control" required />
+      </div>
+      <div class="col-md-4">
+        <input type="file" id="foodImage" accept="image/*" class="form-control" required />
+      </div>
+
+      <div class="col-md-4">
+        <input type="text" id="foodDescribe" placeholder="Mô tả món ăn" class="form-control" required />
+      </div>
+
+      <div class="col-md-2">
+        <input type="number" id="foodPrice" placeholder="Giá (VND)" class="form-control" required />
+      </div>
+      <div class="col-md-2 d-grid">
+        <button type="submit" class="btn btn-primary">
+          <i class="fa-solid fa-plus"></i> Thêm món
+        </button>
+      </div>
+    </form>
+    <div id="editModal" class="custom-modal">
+      <div class="modal-content">
+        <h2>Sửa món ăn</h2>
+        <label>Tên:</label>
+        <input type="text" id="editName" /><br />
+        <label>Mô tả:</label>
+        <textarea id="editDesc"></textarea><br />
+        <label>Giá:</label>
+        <input type="number" id="editPrice" /><br /><br />
+        <button id="saveBtn">Lưu</button>
+        <button id="cancelBtn">Hủy</button>
+      </div>
+    </div>
+    <!-- Danh sách món -->
+    <div id="foodList" class="row"></div>
+  </div>
+
+  <div id="toast"></div>
+  <script type="module" src="./admin.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    (function () { if (!window.chatbase || window.chatbase("getState") !== "initialized") { window.chatbase = (...arguments) => { if (!window.chatbase.q) { window.chatbase.q = [] } window.chatbase.q.push(arguments) }; window.chatbase = new Proxy(window.chatbase, { get(target, prop) { if (prop === "q") { return target.q } return (...args) => target(prop, ...args) } }) } const onLoad = function () { const script = document.createElement("script"); script.src = "https://www.chatbase.co/embed.min.js"; script.id = "ELcdvgEDYbgjLgF3pupPW"; script.domain = "www.chatbase.co"; document.body.appendChild(script) }; if (document.readyState === "complete") { onLoad() } else { window.addEventListener("load", onLoad) } })();
+  </script>
+</body>
+
 </html>
