--- a/information/inform.html
+++ b/information/inform.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <a class="logo" href="../homepage/homepage.html">
+    <a class="logo" href="../admin/admin.html">
       <p id="carry">🍛</p>
       <p id="S">S</p>
       <p id="treet">treet</p>
@@ -23,17 +23,17 @@
       <p id="east">east</p>
     </a>
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="../menu/menu.html">
             <i class="fa-solid fa-clipboard-list"></i> Menu
           </a>
           <a class="nav-link" href="../news/news.html">
-            <i class="fa-solid fa-newspaper"></i> Tin tức
+            <i class="fa-solid fa-newspaper"></i> Khám phá
           </a>
           <a class="nav-link" href="../shopping/shop.html">
             <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
