--- a/login/login.html
+++ b/login/login.html
@@ -25,12 +25,9 @@
             <span style="color: rgb(145, 145, 145);">Chưa có tài khoản? </span>
             <a href="../register/signup.html" style="color: rgb(255, 255, 255);" id="link">Đăng ký</a>
             <span style="color: rgb(145, 145, 145);"> ngay</span>
-            <br>
-            <span style="color: rgb(145, 145, 145);">Hoặc là đăng nhập như một </span>
-            <a href="../homepage/homepage.html" style="color: rgb(255, 255, 255);" id="link">Guest</a>
-            <span style="color: rgb(145, 145, 145);"> !</span>
         </div>
     </div>
+    <div id="toast"></div>
     <script type="module" src="./login.js" defer></script>
 </body>
 </html>
