--- a/setting/theme/theme.html
+++ b/setting/theme/theme.html
@@ -1,209 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Theme page</title>
-        <link rel="stylesheet" href="theme.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-    <style>
-      .switch {
-        position: relative;
-        display: inline-block;
-        margin-top: 190px;
-        width: 600px;
-        height: 340px;
-      }
 
-      .switch input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Theme Page</title>
+  <link rel="stylesheet" href="theme.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <style>
+    .switch {
+      position: relative;
+      display: inline-block;
+      margin-top: 190px;
+      margin-left: 375px;
+      width: 600px;
+      height: 340px;
+    }
 
-      .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        transition: 0.5s;
-        border-radius: 340px;
-      }
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
 
-      .slider:before {
-        position: absolute;
-        content: "";
-        height: 260px;
-        width: 260px;
-        left: 40px;
-        bottom: 40px;
-        background-color: white;
-        transition: 0.5s;
-        border-radius: 50%;
-      }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: 0.5s;
+      border-radius: 340px;
+    }
 
-      input:checked + .slider {
-        background-color: #4caf50;
-      }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 260px;
+      width: 260px;
+      left: 40px;
+      bottom: 40px;
+      background-color: white;
+      transition: 0.5s;
+      border-radius: 50%;
+    }
 
-      input:checked + .slider:before {
-        transform: translateX(260px);
-      }
-    </style>
-  </head>
-  <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <a class="logo" href="../../homepage/homepage.html">
-        <p id="carry">🍛</p>
-        <p id="S">S</p>
-        <p id="treet">treet</p>
-        <p id="F">F</p>
-        <p id="east">east</p>
-      </a>
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="../../menu/menu.html">
-              <i class="fa-solid fa-clipboard-list"></i> Menu
-            </a>
-            <a class="nav-link" href="../../news/news.html">
-              <i class="fa-solid fa-newspaper"></i> Tin tức
-            </a>
-            <a class="nav-link" href="../../shopping/shop.html">
-              <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
-            </a>
-            <!-- Example single danger button -->
-            <div class="btn-group">
-              <button
-                type="button"
-                class="btn-danger dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa-solid fa-user"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="../../login/login.html"
-                    >Đăng xuất</a
-                  >
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="../../information/inform.html">Thông tin</a>
-                </li>
-              </ul>
-            </div>
-            <div class="btn-group">
-              <button
-                type="button"
-                class="btn-danger dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa-solid fa-gear"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="../../setting/about/about.html">About</a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="../../setting/theme/theme.html">Theme</a>
-                </li>
-              </ul>
-            </div>
+    input:checked+.slider {
+      background-color: #4caf50;
+    }
+
+    input:checked+.slider:before {
+      transform: translateX(260px);
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <a class="logo d-flex align-items-center" href="../../homepage/homepage.html">
+      <p id="carry">🍛</p>
+      <p id="S">S</p>
+      <p id="treet">treet</p>
+      <p id="F">F</p>
+      <p id="east">east</p>
+    </a>
+    <div class="container-fluid">
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button> -->
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="../../menu/menu.html">
+            <i class="fa-solid fa-clipboard-list"></i> Menu
+          </a>
+          <a class="nav-link" href="../../news/news.html">
+            <i class="fa-solid fa-newspaper"></i> Khám phá
+          </a>
+          <a class="nav-link" href="../../shopping/shop.html">
+            <i class="fa-solid fa-cart-shopping"></i> Giỏ hàng
+          </a>
+
+          <div class="btn-group">
+            <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fa-solid fa-user"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="../../login/login.html">Đăng xuất</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" href="../../information/inform.html">Thông tin</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="btn-group">
+            <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fa-solid fa-gear"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="../../setting/about/about.html">About</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+              </li>
+              <li>
+                <a class="dropdown-item" href="../../setting/theme/theme.html">Theme</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </nav>
+
+  <!-- Toggle Switch -->
   <label class="switch">
-      <input type="checkbox" id="toggleSwitch" />
-      <span class="slider""></span>
-    </label>
+    <input type="checkbox" id="toggleSwitch" />
+    <span class="slider"></span>
+  </label>
 
-    <script>
-      const toggle = document.getElementById("toggleSwitch");
+  <script>
+    const toggle = document.getElementById("toggleSwitch");
 
-      // Hàm đổi giao diện dựa theo trạng thái
-      function applyTheme(isDark) {
-        if (isDark) {
-          document.body.style.backgroundColor = "black";
-          document.body.style.color = "white";
-          toggle.checked = true;
-        } else {
-          document.body.style.backgroundColor = "white";
-          document.body.style.color = "black";
-          toggle.checked = false;
-        }
+    function applyTheme(isDark) {
+      if (isDark) {
+        document.body.style.backgroundColor = "black";
+        document.body.style.color = "white";
+        toggle.checked = true;
+      } else {
+        document.body.style.backgroundColor = "white";
+        document.body.style.color = "black";
+        toggle.checked = false;
       }
+    }
 
-      // Khi người dùng thay đổi nút
-      toggle.addEventListener("change", function () {
-        const isDark = this.checked;
-        applyTheme(isDark);
-        localStorage.setItem("darkMode", isDark); // Lưu trạng thái vào localStorage
-      });
+    // Khi người dùng thay đổi nút
+    toggle.addEventListener("change", function () {
+      const isDark = this.checked;
+      applyTheme(isDark);
+      localStorage.setItem("darkMode", isDark); // Lưu trạng thái
+    });
 
-      // Khi trang được tải lại → lấy từ localStorage và áp dụng
-      window.addEventListener("DOMContentLoaded", function () {
-        const savedMode = localStorage.getItem("darkMode");
-        const isDark = savedMode === "true"; // Vì localStorage luôn lưu dưới dạng chuỗi
-        applyTheme(isDark);
-      });
-      
-      // Khi load trang
-      document.addEventListener("DOMContentLoaded", () => {
-        // Lấy màu đã lưu nếu có
-        const savedColor = localStorage.getItem("bgColor");
-        if (savedColor) {
-          document.body.style.backgroundColor = savedColor;
-        }
+    // Khi load lại trang
+    window.addEventListener("DOMContentLoaded", function () {
+      const savedMode = localStorage.getItem("darkMode");
+      const isDark = savedMode === "true";
+      applyTheme(isDark);
+    });
+  </script>
 
-        // Giả sử bạn có nút đổi màu
-        const btnChangeColor = document.getElementById("btnChangeColor");
-        btnChangeColor.addEventListener("click", () => {
-          const newColor = prompt("Nhập màu nền mới (tên màu hoặc hex):");
-          if (newColor && newColor.trim() !== "") {
-            document.body.style.backgroundColor = newColor;
+  <!-- Footer -->
+  <div class="container-grid text-center mt-5">
+    <div class="aboutus">
+      <p style="font-weight: bold">About us:</p>
+      <p>- Giờ hoạt động: 24/24</p>
+      <p>- Phone number: 090 2729 859</p>
+    </div>
 
-            // Lưu vào localStorage
-            localStorage.setItem("bgColor", newColor);
+    <img class="foot-img" style="background-color: white; margin-top: 125px"
+      src="https://png.pngtree.com/png-clipart/20231016/original/pngtree-street-food-cart-png-image_13319772.png"
+      width="35%" alt="footer" />
+
+    <div class="followus">
+      <p style="font-weight: bold">Follow us:</p>
+      <p>
+        <i class="fa-brands fa-square-facebook fa-2x" style="color: #1100ff"></i>
+        <i class="fa-brands fa-facebook-messenger fa-2x" style="color: #d400ff"></i>
+        <i class="fa-brands fa-youtube fa-2x" style="color: #ff0000"></i>
+        <i class="fa-brands fa-tiktok fa-2x" style="
+              color: #ffffff;
+              background-color: black;
+              border: 5px solid black;
+            "></i>
+      </p>
+    </div>
+  </div>
+
+  <!-- Back to top -->
+  <button id="backToTop" title="Lên đầu trang">↑</button>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+
+  <script>
+    const backToTop = document.getElementById("backToTop");
+    window.addEventListener("scroll", () => {
+      backToTop.style.display =
+        document.documentElement.scrollTop > 100 ? "block" : "none";
+    });
+    backToTop.addEventListener("click", () => {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+  </script>
+  <script>
+    (function () {
+      if (!window.chatbase || window.chatbase("getState") !== "initialized") {
+        window.chatbase = (...arguments) => {
+          if (!window.chatbase.q) {
+            window.chatbase.q = [];
           }
+          window.chatbase.q.push(arguments);
+        };
+        window.chatbase = new Proxy(window.chatbase, {
+          get(target, prop) {
+            if (prop === "q") {
+              return target.q;
+            }
+            return (...args) => target(prop, ...args);
+          },
         });
-      });
+      }
+      const onLoad = function () {
+        const script = document.createElement("script");
+        script.src = "https://www.chatbase.co/embed.min.js";
+        script.id = "ELcdvgEDYbgjLgF3pupPW";
+        script.domain = "www.chatbase.co";
+        document.body.appendChild(script);
+      };
+      if (document.readyState === "complete") {
+        onLoad();
+      } else {
+        window.addEventListener("load", onLoad);
+      }
+    })();
+  </script>
+</body>
 
-    </script>
-    <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"
-        ></script>
-  </body>
 </html>
